exports[`Layout disables checkout when not ready 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout disables checkout when total is negative 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout disables checkout when total is positive but not ready 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout disables checkout when total is undefined 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout enables checkout when total is positive and ready 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={false} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders null if no accounts exist 1`] = `null`;

exports[`Layout renders the prefilled amount for an existing schedule 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue="$10" />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={false} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders the prefilled date for an existing schedule  1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={false} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders the prefilled frequency for an existing schedule  1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue="Monthly" />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={false} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders the prefilled fund for an existing schedule  1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue={180} />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={false} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders when accounts & state exist 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Review Schedule" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;

exports[`Layout renders with custom text 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<TertiaryPhrase additionalClasses="push-half-right" text="I'd like to give " />
<Input id={-1} name="primary-account" hideLabel={true} type="tel" classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="$0.00" validate={[undefined]} format={[undefined]} style={{...}} defaultValue={{...}} />
<TertiaryPhrase text="to " />
<Select items={{...}} name="select-account" id="select" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" placeholder="select fund here" onChange={[undefined]} defaultValue="General Fund" />
<TertiaryPhrase text=" " />
<Select items={[undefined]} name="schedules" id="schedules" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-light-tertiary" includeBlank={true} placeholder="choose frequency" onChange={[undefined]} defaultValue={{...}} />
<TertiaryPhrase text=" starting " />
<DateComponent id="start-date" name="start-date" hideLabel={true} classes={{...}} inputClasses="flush-bottom h3 hard-top outlined--dotted outlined--light text-dark-primary show-placeholder_1bkmqm1" placeholder="select date" past={false} today={false} format={[Function]} validation={[undefined]} defaultValue={{...}} />
<div className="push-top">
<Connect(Apollo(CheckoutButton)) disabled={true} onClick={[undefined]} text="Make Schedules Now" dataId={[undefined]} disabledGuest={true} />
</div>
</Form>
</div>
`;
